fortune-cookie-backend/kubernetes/app/service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fortune-cookie-backend
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
#    service.beta.kubernetes.io/aws-load-balancer-type: "external"
#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: ClusterIP   # LoadBalancer - initial health check duration takes longer
  selector:
    app: fortune-cookie-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
